   unsubscribe members as they are added to or removed from a project.
   (This used to only work for mailing lists with a specific id based on
   the project name.) (rafrombrc)

 * Temporarily abstract out the link to topp into configuration.
   This should be in a separate theme package because it's topp specific.
   (rmarianski)

 * More templates marked up for translation. (egj)

Bugs Fixed:

 * The topnav within a member space was always displaying the member's original
   Title (i.e. fullname?fullname:id) as it was set at account creation time. It
   now properly displays the member's current Title at all times (#2779) (egj)

 * Thumbnail view on the attachment images now explicitly sets content type
   header as image/jpeg (rafrombrc)

Refactoring:

 * Extracted opencore.wordpress into its own egg as a plugin (#2715) (egj)

 * Heavily refactored `BaseView.area` and `BaseView.window_title` functions 
   in `opencore.browser.base` (#588#comment:7 and following) (egj)

 * Cut down on number of catalog queries in forgot view (rmarianski)


0.16.0 (2009-02-27)
===================

Features Added:

 * ProjectInfoView.project (aka BaseView.piv.project) now takes
   advantage of special HTTP headers for specifying a default project
   if there's none in the acquisition context. (Deliverance has
   apparently provided these headers for a while, and we already use
   them in the top nav, but we haven't used them in this view.) To use
   this, the proxy server can set headers X-Openplans-Application to
   anything other than 'zope', and X-Openplans-Project to the ID of
   the project. (slinkp, rmarianski)

 * More templates marked up for translation. (slinkp, dimo)

Bugs Fixed:

 * Fixed a bug in utility.email_sender that prevented keyword args
   from being used in translation interpolation as expected (slinkp)

 * Fixed invite reminder email so the message gets correctly
   translated including the passed variables (slinkp)
